경북대 BE_이지호_3주차 과제(3단계) (#412)
* feat: set up the project

feat: 위시 리스트 작업물 clone

DOCS: readme 수정

DOCS: 1단계 readme 추가

feat: 필요 의존성 추가 및 properties 추가

feat: 각 entity JPA로 변환

feat: Repository class 생성 및 연관 내용 리팩토링, refactor: Auth -> User로 변경 후 UserController 내에서 Service 분리

feat: ProblemDetail에 type 추가

feat: @DataJpaTest를 이용한 Test생성 및 구현

test: @Modifying 어노테이션을 사용한 메서드 테스트코드에 flush 추가

* DOCS: step2 readme 작성

* feat: entity들 연관관계 매핑

* refactor: 연관관계 기반 repository 및 service 수정

* test: Test코드 수정 및 테스트

* remove: MySQL 속성 삭제

* remove: 사용하지 않는 import 삭제

* test: 테스트코드 일관성을 위한 수정 및 displayName 변경

* refactor: 일관성을 위해 DTO중 ProductRequest 추가

* refactor: entity내의 필드를 래퍼 클래스로 변경

* remove: 사용하지 않는 메서드 삭제

* feat: find관련 JPQL 타입을 Optional로 변경 및 위시리스트 관련 커스텀 exception 추가

* fix: 테스트용으로 바꿔놓은 인터셉터 url 롤백

* refactor: step2 코멘트 적용

* test: 오류 수정

* DOCS: 3단계 readme 추가

* feat: JPA repository에 Page타입의 find JPQL 추가

* feat: service와 repository단 모든 객체 표시 반환 타입을 List -> Page로 변경

* feat: SSR 수정

* fix: 정렬기준 수정

* feat: product 더미데이터 30개 추가

* feat: 유저, 위시리스트 더미데이터 추가 및 위치변경

* test: 더미데이터 테스트코드에서 사용 위해 data.sql로 변환 후 테스트코드에 페이지네이션 추가

* feat: product 객체를 삭제하면 관련된 위시도 삭제되는 기능 추가

* fix: ProductController ResponseEntity타입으로 변환 후 컨트롤러의 생성 -> 생성된 객체 반환, 삭제/수정 -> 완료멘트 반환 으로 수정

---------

Co-authored-by: wotjd243 <wotjd243@naver.com>